修改了 update函数的逻辑  id必须添加在postman里面
