# docs/swagger.yaml
@@ -12,51 +12,63 @@ paths:
             type: string
       tags:
       - 首页
-  /user/GetUserList:
-    get:
-      responses:
-        "200":
-          description: code","message"}
-          schema:
-            type: string
-      summary: 所有用户
-      tags:
-      - 用户模块
   /user/createUser:
-    get:
+    post:
+      consumes:
+      - multipart/form-data
       parameters:
       - description: 用户名
-        in: query
+        in: formData
         name: name
+        required: true
         type: string
       - description: 密码
-        in: query
+        in: formData
         name: password
+        required: true
         type: string
       - description: 确认密码
-        in: query
+        in: formData
         name: repassword
+        required: true
         type: string
+      produces:
+      - application/json
       responses:
         "200":
-          description: code","message"}
+          description: OK
           schema:
-            type: string
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
       summary: 新增用户
       tags:
       - 用户模块
   /user/deleteUser:
-    get:
+    delete:
       parameters:
-      - description: id
+      - description: 用户ID
         in: query
         name: id
-        type: string
+        required: true
+        type: integer
+      produces:
+      - application/json
       responses:
         "200":
-          description: code","message"}
+          description: OK
           schema:
-            type: string
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
       summary: 删除用户
       tags:
       - 用户模块
@@ -79,35 +91,60 @@ paths:
       summary: 所有用户
       tags:
       - 用户模块
+  /user/list:
+    get:
+      description: 获取系统中所有用户的列表信息
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      summary: 获取所有用户列表
+      tags:
+      - 用户模块
   /user/updateUser:
-    post:
+    put:
+      consumes:
+      - multipart/form-data
       parameters:
-      - description: id
+      - description: 用户ID
         in: formData
         name: id
-        type: string
-      - description: name
+        required: true
+        type: integer
+      - description: 用户名
         in: formData
         name: name
         type: string
-      - description: password
+      - description: 密码
         in: formData
         name: password
         type: string
-      - description: phone
+      - description: 电话
         in: formData
         name: phone
         type: string
-      - description: email
+      - description: 邮箱
         in: formData
         name: email
         type: string
+      produces:
+      - application/json
       responses:
         "200":
-          description: code","message"}
+          description: OK
           schema:
-            type: string
-      summary: 修改用户
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+      summary: 修改用户信息
       tags:
       - 用户模块
 swagger: "2.0"
